tests/paczka1/small_fuzzy/56983817.err
Error in line 1: rLmvZh S6? 90,9
Error in line 3: rLmvZh S421 85,4
Error in line 7: Ht6auWnp S421 81,1
